Adapt to Spring-boot-3 (#88)